--- a/mainsite.css
+++ b/mainsite.css
@@ -1,15 +1,103 @@
 html {
     scroll-behavior: smooth;
-  }
-  
-.gif {
-    width: 30%;
-    place-items: left;
 }
-.sortable:hover {
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f0f0f0;
+}
+
+/* Title */
+#title {
+    text-align: center;
+    font-size: 37px;
+}
+#mobiletitle {
+    display: none;
+    color: white;
+    font-size: 25px;
+    margin-left: 20px;
+}
+/* Topnav */
+.topnav {
+    position: sticky;
+    top: 0px;
+    background-color: #333;
+    display: flex;
+    justify-content: center; /* Center the items horizontally */
+    align-items: center; /* Center the items vertically */
+    z-index: 1;
+}
+
+.topnav-content {
+    display: flex;
+    align-items: center; /* Center items vertically */
+}
+
+.navbar {
+    list-style-type: none;
+    overflow: hidden; /* Hide the content when collapsed */
+}
+
+.navbar li {
+    display: inline;
+    margin-right: 10px;
+}
+
+.navelement {
+    color: white;
+    text-decoration: none;
+    font-weight: bolder;
+    font-size: 20px;
+}
+
+.navelement:hover {
+    color:#4CAF50;
+}
+
+/* Hamburger menu */
+.hamburger-menu {
+    display: none;
+    font-size: 30px;
+    color: white;
+    background: none;
+    border: none;
     cursor: pointer;
 }
 
+/* Responsive styles for mobile */
+@media screen and (max-width: 768px) {
+    /* Remove ordinary title */
+    #title {
+        display: none;
+    }
+
+    #mobiletitle {
+        display: inline;
+    }
+
+    .topnav {
+        justify-content: space-between; /* Place items on the left */
+        padding: 10px;
+    }
+
+    .navbar {
+        display: none;
+        flex-direction: column;
+    }
+
+    .navbar.active {
+        display: flex;
+    }
+
+    .hamburger-menu {
+        display: block;
+    }
+}
+
+/* Sorting printerdata buttons */
 .sortable:hover {
     cursor: pointer;
 }
@@ -21,6 +109,8 @@ html {
     border-radius: 5px;
     transition: background-color 0.3s ease;
 }
+
+/* Refresh button */
 #refreshButton:hover{
     cursor: pointer;
 }
@@ -30,23 +120,30 @@ html {
     border-radius: 5px;
     transition: background-color 0.3s ease;
 }
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f0f0f0;
+
+/* Search field */
+#searchInput {
+    width: 100%;
+    padding: 15px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    transition: padding 0.3s ease;
 }
 
-h1 {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 0;
+#searchInput:focus {
+    padding: 20px;
+}
+
+/* Loading text */
+#loading {
+    display: none;
     text-align: center;
+    padding: 10px 0;
 }
 
+/* Table of printer data */
 #printerTable {
     width: 100%;
-    margin-top: 20px;
     border-collapse: collapse;
 }
 
@@ -65,51 +162,21 @@ h1 {
     color: white;
 }
 
-#loading {
-    display: none;
-    text-align: center;
-    padding: 10px 0;
+#printerTable th:nth-child(4) {
+    width: 20%;
 }
 
-#searchInput {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
+/* Status column */
+.tooltip {
+    cursor: pointer;
 }
 .status-cell {
     position: relative;
 }
-
 .status-progress {
     position: absolute;
     bottom: 0;
     width: 100%;
     border-radius: 0;
     height: 10%;
-}
-#printerTable th:nth-child(4) {
-    width: 20%; /* Adjust this value as needed */
-}
-
-.tooltip {
-    cursor: pointer;
-}
-
-.curaDownloadBTN {
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 10px;
-}
-
-.curaDownloadBTN:hover {
-    background-color: #45a049;
 }
