--- a/mainsite.css
+++ b/mainsite.css
@@ -1,3 +1,4 @@
+/* Existing styles */
 html {
     scroll-behavior: smooth;
 }
@@ -28,7 +29,7 @@ body {
     display: flex;
     justify-content: center; /* Center the items horizontally */
     align-items: center; /* Center the items vertically */
-    z-index: 1;
+    z-index: 2;
 }
 
 .topnav-content {
@@ -229,11 +230,14 @@ body {
 .printer-status-card {
     font-size: medium;
     font-weight: bold;
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
     margin-left: 10px;
     margin-right: 10px;
     border-radius: 5px;
     padding: 0px;
-    height: 28px;
+    height: 40px;
 }
 
 .printer-bottom-text {
@@ -244,23 +248,43 @@ body {
     transform: translateX(-50%); /* Adjust position to center */
 }
 
+.adressBottomText {
+    color: #292929;
+    font-size: 10px;
+    position: absolute;
+    bottom: -10px;
+    left: 50%; /* Center horizontally */
+    transform: translateX(-50%); /* Adjust position to center */
+}
+
 /* Status column */
 .tooltip {
     cursor: pointer;
 }
 .status-cell {
     position: relative;
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
 }
 
 .timeleftText {
-    position: absolute;
+    color: #909090;
+    font-weight: bold;
     z-index: 1;
-    text-align: center;
+}
+
+.timeleftDiv {
+    position: absolute;
+    align-items: center;
+    top: 53%;
+    width: 100%;
 }
 
 .statusText {
     position: relative;
     z-index: 1;
+    text-align: center; /* Center text horizontally */
 }
 
 /* Footerdiv */
