--- a/mainsite.css
+++ b/mainsite.css
@@ -51,6 +51,7 @@ body {
     display: flex;
     justify-content: center; /* Center the items horizontally */
     align-items: center; /* Center the items vertically */
+    padding-right: 7%;
     z-index: 2;
 }
 
