--- a/mainsite.css
+++ b/mainsite.css
@@ -104,29 +104,23 @@ body {
     transition: background-color 0.3s ease;
 }
 
-/* Refresh button */
-#refreshButton:hover{
-    cursor: pointer;
-}
-#refreshButton {
-    cursor: pointer;
-    padding: 2px 5px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
 /* Search field */
 #searchInput {
-    background-color: #696969;
-    border: 2px solid black;
-    width: 100%;
-    padding: 25px 20px;
-    margin: 8px 0;
+    /* Sizing */
+    width: 99%;
+    padding: 10px 20px;
+    margin: 8px auto;
     box-sizing: border-box;
-    transition: padding 0.3s ease, font-size 0.3s ease;;
+    /* Background+ */
+    background-color: #2c2c2c;
+    border: 2px solid #383838;
+    border-radius: 5px;
+    /* Text */
     font-size: large;
     color: white;
-    outline: none;
+    /* Other */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: padding 0.3s ease, font-size 0.3s ease;
 }
 
 #searchInput::placeholder {
@@ -134,54 +128,91 @@ body {
 }
 
 #searchInput:focus {
-    padding: 30px;
+    outline: none;
+    padding: 22px;
     font-size: larger;
 }
 
+/* Under search */
 .underSearchDiv {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     position: relative;
 }
 
 #updatedAutoText {
-    position: absolute;
-    margin-right: 15px;
-    right: 0px;
-    transform: translateY(-70%);
+    margin-right: 10px;
+    margin-left: auto;
+    padding: 10px;
+    /* BG */
+    background-color: #383838;
+    background-image: linear-gradient(135deg, #4a4a4a, #383838);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    /* Text */
+    color: white;
+    font-size: 1rem;
+    /* Border */
+    border: none;
+    border-radius: 5px;
+    /* Other */
+    cursor: pointer;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
 
-/* Switch button */
+/* Switch display mode button, switches from gridview to table view and back */
 #switchDisplayBTN {
-    background-color: #383838;
+    /* Sizing */
     margin-left: 10px;
     margin-right: 10px;
-    padding: 10px 10px 10px 10px;
+    padding: 10px;
     width: 190px;
-    color: #909090;
+    /* BG */
+    background-color: #383838;
+    background-image: linear-gradient(135deg, #4a4a4a, #383838);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    /* Text */
+    color: white;
     font-size: 1rem;
+    /* Border */
+    border: none;
+    border-radius: 5px;
+    /* Other */
+    cursor: pointer;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+#switchDisplayBTN:hover {
+    background-color: #505050;
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
 }
 
 /* Filter */
 #filterSelect {
-    background-color: #383838;
+    /* Sizing */
     margin-left: 10px;
     margin-right: 10px;
+    padding: 10px;
     width: 190px;
-    border: #222222 2px solid;
-    border-radius: 2px;
-    font-family: 'FontAwesome', 'sans-serif';
+    /* BG */
+    background-color: #383838;
+    background-image: linear-gradient(135deg, #4a4a4a, #383838);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    /* Text */
+    color: white;
     font-size: 1rem;
-    color: #909090;
-    padding: 10px 10px 10px 10px;
-}
-
-#filterSelect:focus {
-    border-color: #444444; /* Change border color on focus */
+    font-family: 'FontAwesome', 'sans-serif';
+    /* Border */
+    border: none;
+    border-radius: 5px;
+    /* Other */
+    cursor: pointer;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
 
 #filterSelect:hover {
-    border-color: #444444;
+    background-color: #363636;
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
 }
 
 /* Loading text */
