--- a/mainsite.css
+++ b/mainsite.css
@@ -403,6 +403,215 @@ body {
     z-index: 1;
     text-align: center; /* Center text horizontally */
 }
+/* Printermodal */
+@keyframes modalFadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); 
+}
+
+.modal-content {
+    display: grid;
+    background-color: #292929;
+    margin: 10% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 70%;
+    border-radius: 10px;
+    gap: 5px;
+    grid-template-columns: .4fr 1fr 1fr 1fr .2fr;
+    grid-template-rows: .5fr .4fr .4fr .4fr .5fr;
+    grid-template-areas: "p pn pn . c" 
+                         ". pm pm . ."
+                         "s s s pt pt"
+                         "s s s n n"
+                         "lm lm tl . ."
+                         "f f a a b";
+    animation: modalFadeIn 0.5s ease-out; 
+}
+
+/* Modal items */
+#modalPlacementCode {
+    color: white;
+    font-size: 40px;
+    font-weight: bold;
+    background-color: #909090;
+    padding: 10px;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    border: 1px transparent solid;
+    border-radius: 10px;
+    grid-area: p;
+    margin: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#modalPrinterName {
+    color: white;
+    font-size: 60px;
+    font-weight: bold;
+    grid-area: pn;
+    margin: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#modalPrinterModel {
+    color: white;
+    margin: 0px;
+    font-size: 25px;
+    font-weight: bold;
+    grid-area: pm;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#modalPrinterStatus {
+    grid-area: s;
+}
+
+.modalStatus {
+    font-size: large;
+    font-weight: bold;
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 5px;
+    padding: 0px;
+    height: 100%;
+    font-size: 22px;
+}
+
+#modalAddress, #modalPrinterTemps, #modalGoToOctoButton, #modalPrinterNote, #modalLoadedModel, #modalTimeLeft, #modalLastUpdated  {
+    color: white;
+    font-size: 16px;
+    margin: 0px;
+}
+
+#modalTimeLeft {
+    grid-area: tl;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.modalTimeLeft {
+    height: auto;
+}
+
+#modalLoadedModel {
+    grid-area: lm;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+}
+#modalPrinterNote {
+    grid-area: n;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+#modalPrinterTemps {
+    grid-area: pt;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+#modalLastUpdated {
+    grid-area: f;
+    position: relative;
+    top: 50%;
+}
+
+#modalGoToOctoButton {
+    font-size: 40px;
+    grid-area: b;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.copyButton {
+    background-color: transparent;
+    border: none;
+    color: white;
+    margin: 0px;
+    cursor: pointer;
+}
+
+#modalAddress {
+    color: white;
+    background-color: #323232;
+    padding: 10px;
+    font-size:20px;
+    width: 70%;
+    border: 4px #2c2c2c solid;
+    border-radius: 5px;
+    grid-area: a;
+    margin: 0px;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.copiedMessage {
+    color: rgb(0, 250, 0);
+}
+
+.copyButton:hover {
+    transform: scale(1.1);
+    transition: transform 0.3s ease;
+}
+
+/* Modal close button */
+.close{
+    color: #aaa;
+    font-size: 50px;
+    font-weight: bold;
+    grid-area: c;
+    /* Moves the button a little more into the corner */
+    position: relative;
+    bottom: 10px;
+    left: 10px;    
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 
 /* Footerdiv */
 #footerDiv {
