--- a/mainsite.css
+++ b/mainsite.css
@@ -5,12 +5,12 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    background-color: #ff0000; /* Light red background */
+    background-color: #ff0000; 
     padding:5px;
 }
 
 #problemtext {
-    color: #333; /* Dark text for readability */
+    color: #333;
 }
 
 #dismissProblemDivButton {
@@ -49,20 +49,20 @@ body {
     top: 0px;
     background-color: #333;
     display: flex;
-    justify-content: center; /* Center the items horizontally */
-    align-items: center; /* Center the items vertically */
+    justify-content: center; 
+    align-items: center;
     padding-right: 7%;
     z-index: 2;
 }
 
 .topnav-content {
     display: flex;
-    align-items: center; /* Center items vertically */
+    align-items: center;
 }
 
 .navbar {
     list-style-type: none;
-    overflow: hidden; /* Hide the content when collapsed */
+    overflow: hidden; /* Hide the content when collapsed (mobile) */
 }
 
 .navbar li {
@@ -265,7 +265,7 @@ body {
     text-align: center;
     border-radius: 10px;
     margin:10px;
-    width:200px;
+    width:210px;
     height: 250px;
     flex-grow: 1;
     position: relative;
@@ -290,8 +290,8 @@ body {
     font-size: medium;
     font-weight: bold;
     display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
+    justify-content: center; 
+    align-items: center; 
     margin-left: 10px;
     margin-right: 10px;
     border-radius: 5px;
@@ -303,8 +303,8 @@ body {
     color: #909090;
     position: absolute;
     bottom: 20px;
-    left: 50%; /* Center horizontally */
-    transform: translateX(-50%); /* Adjust position to center */
+    left: 50%;
+    transform: translateX(-50%); 
 }
 
 .adressBottomText {
@@ -312,8 +312,8 @@ body {
     font-size: 12px;
     position: absolute;
     bottom: -5px;
-    left: 50%; /* Center horizontally */
-    transform: translateX(-50%); /* Adjust position to center */
+    left: 50%; 
+    transform: translateX(-50%); 
 }
 
 .printerNote {
@@ -371,8 +371,8 @@ body {
 .status-cell {
     position: relative;
     display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
+    justify-content: center; 
+    align-items: center;
 }
 
 .positionCodeText {
@@ -403,7 +403,7 @@ body {
 .statusText {
     position: relative;
     z-index: 1;
-    text-align: center; /* Center text horizontally */
+    text-align: center;
 }
 /* Printermodal */
 @keyframes modalFadeIn {
@@ -425,7 +425,6 @@ body {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); 
 }
 
@@ -639,10 +638,10 @@ body {
 }
 
 #updatedAutoTextBottomBar {
-    display: block; /* Ensure it is displayed */
+    display: block;
     text-align: center;
     margin: 0;
-    color: white; /* Ensure text is visible */
+    color: white; 
 }
 
 /* Responsive styles for mobile */
@@ -658,7 +657,7 @@ body {
     }
 
     .topnav {
-        justify-content: space-between; /* Place items on the left */
+        justify-content: space-between;
         padding: 10px;
     }
 
@@ -679,8 +678,8 @@ body {
 
     .underSearchDiv {
         display: flex;
-        flex-direction: column; /* Arrange children in a column */
-        align-items: center; /* Center children horizontally */
+        flex-direction: column; 
+        align-items: center;
     }
     
     #switchDisplayBTN {
@@ -706,11 +705,11 @@ body {
     }
 
     #updatedAutoTextBottomBar {
-        display: block; /* Ensure it is displayed */
+        display: block; 
         text-align: center;
         margin: 0;
-        color: white; /* Ensure text is visible */
-        position: static; /* Ensure relative positioning if needed */
+        color: white; 
+        position: static; 
     }
 }
 
