--- a/style/mainsite.css
+++ b/style/mainsite.css
@@ -147,11 +147,12 @@ body {
     padding: 10px;
     /* BG */
     background-color: #383838;
-    background-image: linear-gradient(135deg, #4a4a4a, #383838);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    background-image: linear-gradient(135deg, #4a4a4a, #3d3d3d);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
     /* Text */
     color: white;
     font-size: 1rem;
+    font-family: 'FontAwesome', Arial;
     /* Border */
     border: none;
     border-radius: 5px;
@@ -169,11 +170,12 @@ body {
     width: 190px;
     /* BG */
     background-color: #383838;
-    background-image: linear-gradient(135deg, #4a4a4a, #383838);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    background-image: linear-gradient(135deg, #4a4a4a, #3d3d3d);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
     /* Text */
     color: white;
     font-size: 1rem;
+    font-family: 'FontAwsome', Arial;
     /* Border */
     border: none;
     border-radius: 5px;
@@ -196,12 +198,12 @@ body {
     width: 190px;
     /* BG */
     background-color: #383838;
-    background-image: linear-gradient(135deg, #4a4a4a, #383838);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    background-image: linear-gradient(135deg, #4a4a4a, #3d3d3d);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
     /* Text */
     color: white;
     font-size: 1rem;
-    font-family: 'FontAwesome', 'sans-serif';
+    font-family: 'FontAwesome', 'Arial';
     /* Border */
     border: none;
     border-radius: 5px;
